@@ -152,6 +152,7 @@ t/run/080_recursion.t
 t/run/081_context.t
 t/run/085_closure.t
 t/run/100_do_file.t
+t/run/110_eval.t
 t/run/files/foo.pl
 t/runtime/001_load.t
 t/runtime/002_base.t
