@@ -189,7 +189,7 @@ dot_dot
 dot_dot_dot
 dup
 end
-eval                
+eval                u       noattr      same                 1   1
 fresh_string        0       s           same                 0   1
 ft_atime            u       noattr      same                 1   1
 ft_ctime            u       noattr      same                 1   1
