@@ -3,10 +3,12 @@ Revision history for Perl extension Language::P.
 0.01_04
 	- Parsing:
 	    - 'do' in its various forms.
+	    - Make eval 'string' capture all lexicals in scope.
 	- Intermediate representation:
 	    - Fix code generation for nested if-then-else constructs.
 	- Toy runtime
 	    - Execute BEGIN blocks as soon as they are parsed.
+	    - Implemented eval 'string'.
 
 0.01_03  Sun Mar  1 17:52:48 CET 2009
 	- Parsing:
